# serializer version: 1
# name: test_rewrite_grub_al10_bios_happy_path
  '''
  set default="0"
  
  function load_video {
    insmod all_video
  }
  
  load_video
  set gfxpayload=keep
  insmod gzio
  insmod part_gpt
  insmod ext2
  insmod chain
  
  set timeout=5
  ### END /etc/grub.d/00_header ###
  
  search --no-floppy --set=root -l 'AlmaLinux-10-2-x86_64-dvd'
  
  ### BEGIN /etc/grub.d/10_linux ###
  # ks-gen unattended entry — do not edit
  menuentry 'Unattended STIG install (ks-gen)' --class fedora --class gnu-linux --class gnu --class os {
    search --no-floppy --set=root -l 'ALMA10'
    linux /images/pxeboot/vmlinuz inst.stage2=hd:LABEL=ALMA10 inst.repo=hd:LABEL=ALMA10 inst.ks=hd:LABEL=ALMA10:/ks.cfg quiet
    initrd /images/pxeboot/initrd.img
  }
  
  menuentry 'Install AlmaLinux 10.2' --class fedora --class gnu-linux --class gnu --class os {
  	linux /images/pxeboot/vmlinuz inst.stage2=hd:LABEL=AlmaLinux-10-2-x86_64-dvd quiet
  	initrd /images/pxeboot/initrd.img
  }
  menuentry 'Test this media & install AlmaLinux 10.2' --class fedora --class gnu-linux --class gnu --class os {
  	linux /images/pxeboot/vmlinuz inst.stage2=hd:LABEL=AlmaLinux-10-2-x86_64-dvd rd.live.check quiet
  	initrd /images/pxeboot/initrd.img
  }
  menuentry 'Install AlmaLinux 10.2 in FIPS mode' --class fedora --class gnu-linux --class gnu --class os {
  	linux /images/pxeboot/vmlinuz inst.stage2=hd:LABEL=AlmaLinux-10-2-x86_64-dvd quiet fips=1
  	initrd /images/pxeboot/initrd.img
  }
  submenu 'Troubleshooting -->' {
  	menuentry 'Install AlmaLinux 10.2 in basic graphics mode' --class fedora --class gnu-linux --class gnu --class os {
  		linux /images/pxeboot/vmlinuz inst.stage2=hd:LABEL=AlmaLinux-10-2-x86_64-dvd nomodeset quiet
  		initrd /images/pxeboot/initrd.img
  	}
  	menuentry 'Rescue an AlmaLinux system' --class fedora --class gnu-linux --class gnu --class os {
  		linux /images/pxeboot/vmlinuz inst.stage2=hd:LABEL=AlmaLinux-10-2-x86_64-dvd inst.rescue quiet
  		initrd /images/pxeboot/initrd.img
  	}
  	menuentry 'Boot first drive' --class fedora --class gnu-linux --class gnu --class os {
  		chainloader (hd0)+1
  	}
  	menuentry 'Boot second drive' --class fedora --class gnu-linux --class gnu --class os {
  		chainloader (hd1)+1
  	}
  }
  
  '''
# ---
# name: test_rewrite_grub_al10_efi_happy_path
  '''
  set default="0"
  
  function load_video {
    insmod efi_gop
    insmod efi_uga
    insmod video_bochs
    insmod video_cirrus
    insmod all_video
  }
  
  load_video
  set gfxpayload=keep
  insmod gzio
  insmod part_gpt
  insmod ext2
  
  set timeout=5
  ### END /etc/grub.d/00_header ###
  
  search --no-floppy --set=root -l 'AlmaLinux-10-2-x86_64-dvd'
  
  ### BEGIN /etc/grub.d/10_linux ###
  # ks-gen unattended entry — do not edit
  menuentry 'Unattended STIG install (ks-gen)' --class fedora --class gnu-linux --class gnu --class os {
    search --no-floppy --set=root -l 'ALMA10'
    linuxefi /images/pxeboot/vmlinuz inst.stage2=hd:LABEL=ALMA10 inst.repo=hd:LABEL=ALMA10 inst.ks=hd:LABEL=ALMA10:/ks.cfg quiet
    initrdefi /images/pxeboot/initrd.img
  }
  
  menuentry 'Install AlmaLinux 10.2' --class fedora --class gnu-linux --class gnu --class os {
  	linuxefi /images/pxeboot/vmlinuz inst.stage2=hd:LABEL=AlmaLinux-10-2-x86_64-dvd quiet
  	initrdefi /images/pxeboot/initrd.img
  }
  menuentry 'Test this media & install AlmaLinux 10.2' --class fedora --class gnu-linux --class gnu --class os {
  	linuxefi /images/pxeboot/vmlinuz inst.stage2=hd:LABEL=AlmaLinux-10-2-x86_64-dvd rd.live.check quiet
  	initrdefi /images/pxeboot/initrd.img
  }
  menuentry 'Install AlmaLinux 10.2 in FIPS mode' --class fedora --class gnu-linux --class gnu --class os {
  	linuxefi /images/pxeboot/vmlinuz inst.stage2=hd:LABEL=AlmaLinux-10-2-x86_64-dvd quiet fips=1
  	initrdefi /images/pxeboot/initrd.img
  }
  submenu 'Troubleshooting -->' {
  	menuentry 'Install AlmaLinux 10.2 in basic graphics mode' --class fedora --class gnu-linux --class gnu --class os {
  		linuxefi /images/pxeboot/vmlinuz inst.stage2=hd:LABEL=AlmaLinux-10-2-x86_64-dvd nomodeset quiet
  		initrdefi /images/pxeboot/initrd.img
  	}
  	menuentry 'Rescue an AlmaLinux system' --class fedora --class gnu-linux --class gnu --class os {
  		linuxefi /images/pxeboot/vmlinuz inst.stage2=hd:LABEL=AlmaLinux-10-2-x86_64-dvd inst.rescue quiet
  		initrdefi /images/pxeboot/initrd.img
  	}
  }
  
  '''
# ---
# name: test_rewrite_grub_happy_path
  '''
  set default="0"
  set timeout=5
  ### BEGIN /etc/grub.d/00_header ###
  function load_video {
    insmod efi_gop
    insmod efi_uga
    insmod video_bochs
    insmod video_cirrus
    insmod all_video
  }
  load_video
  set gfxpayload=keep
  insmod gzio
  insmod part_gpt
  insmod ext2
  ### END /etc/grub.d/00_header ###
  
  # ks-gen unattended entry — do not edit
  menuentry 'Unattended STIG install (ks-gen)' --class fedora --class gnu-linux --class gnu --class os {
    search --no-floppy --set=root -l 'ALMA9'
    linuxefi /images/pxeboot/vmlinuz inst.stage2=hd:LABEL=ALMA9 inst.repo=hd:LABEL=ALMA9 inst.ks=hd:LABEL=ALMA9:/ks.cfg quiet
    initrdefi /images/pxeboot/initrd.img
  }
  
  menuentry 'Install AlmaLinux 9.6' --class fedora --class gnu-linux --class gnu --class os {
  	linuxefi /images/pxeboot/vmlinuz inst.stage2=hd:LABEL=AlmaLinux-9-6-x86_64-dvd quiet
  	initrdefi /images/pxeboot/initrd.img
  }
  menuentry 'Test this media & install AlmaLinux 9.6' --class fedora --class gnu-linux --class gnu --class os {
  	linuxefi /images/pxeboot/vmlinuz inst.stage2=hd:LABEL=AlmaLinux-9-6-x86_64-dvd rd.live.check quiet
  	initrdefi /images/pxeboot/initrd.img
  }
  submenu 'Troubleshooting -->' {
  	menuentry 'Rescue an AlmaLinux system' {
  		linuxefi /images/pxeboot/vmlinuz inst.stage2=hd:LABEL=AlmaLinux-9-6-x86_64-dvd rescue
  		initrdefi /images/pxeboot/initrd.img
  	}
  }
  
  '''
# ---
# name: test_rewrite_grub_happy_path_al8
  '''
  set default="0"
  set timeout=5
  ### BEGIN /etc/grub.d/00_header ###
  function load_video {
    insmod efi_gop
    insmod efi_uga
    insmod video_bochs
    insmod video_cirrus
    insmod all_video
  }
  load_video
  set gfxpayload=keep
  insmod gzio
  insmod part_gpt
  insmod ext2
  ### END /etc/grub.d/00_header ###
  
  # ks-gen unattended entry — do not edit
  menuentry 'Unattended STIG install (ks-gen)' --class fedora --class gnu-linux --class gnu --class os {
    search --no-floppy --set=root -l 'ALMA8'
    linuxefi /images/pxeboot/vmlinuz inst.stage2=hd:LABEL=ALMA8 inst.repo=hd:LABEL=ALMA8 inst.ks=hd:LABEL=ALMA8:/ks.cfg quiet
    initrdefi /images/pxeboot/initrd.img
  }
  
  menuentry 'Install AlmaLinux 8.10' --class fedora --class gnu-linux --class gnu --class os {
  	linuxefi /images/pxeboot/vmlinuz inst.stage2=hd:LABEL=AlmaLinux-8-10-x86_64-dvd quiet
  	initrdefi /images/pxeboot/initrd.img
  }
  menuentry 'Test this media & install AlmaLinux 8.10' --class fedora --class gnu-linux --class gnu --class os {
  	linuxefi /images/pxeboot/vmlinuz inst.stage2=hd:LABEL=AlmaLinux-8-10-x86_64-dvd rd.live.check quiet
  	initrdefi /images/pxeboot/initrd.img
  }
  submenu 'Troubleshooting -->' {
  	menuentry 'Rescue an AlmaLinux system' {
  		linuxefi /images/pxeboot/vmlinuz inst.stage2=hd:LABEL=AlmaLinux-8-10-x86_64-dvd rescue
  		initrdefi /images/pxeboot/initrd.img
  	}
  }
  
  '''
# ---
# name: test_rewrite_isolinux_happy_path
  '''
  default vesamenu.c32
  timeout 50
  display boot.msg
  
  menu background splash.png
  menu title AlmaLinux 9.6
  menu vshift 8
  menu rows 18
  menu margin 8
  
  # ks-gen unattended entry — do not edit
  label ksgen-unattended
    menu label ^Unattended STIG install (ks-gen)
    menu default
    kernel vmlinuz
    append initrd=initrd.img inst.stage2=hd:LABEL=ALMA9 inst.repo=hd:LABEL=ALMA9 inst.ks=hd:LABEL=ALMA9:/ks.cfg quiet
  
  label linux
    menu label ^Install AlmaLinux 9.6
    kernel vmlinuz
    append initrd=initrd.img inst.stage2=hd:LABEL=AlmaLinux-9-6-x86_64-dvd quiet
  
  label check
    menu label Test this ^media & install AlmaLinux 9.6
    kernel vmlinuz
    append initrd=initrd.img inst.stage2=hd:LABEL=AlmaLinux-9-6-x86_64-dvd rd.live.check quiet
  
  menu separator
  
  label rescue
    menu label ^Rescue an AlmaLinux system
    kernel vmlinuz
    append initrd=initrd.img inst.stage2=hd:LABEL=AlmaLinux-9-6-x86_64-dvd rescue
  
  '''
# ---
# name: test_rewrite_isolinux_happy_path_al8
  '''
  default vesamenu.c32
  timeout 50
  display boot.msg
  
  menu background splash.png
  menu title AlmaLinux 8.10
  menu vshift 8
  menu rows 18
  menu margin 8
  
  # ks-gen unattended entry — do not edit
  label ksgen-unattended
    menu label ^Unattended STIG install (ks-gen)
    menu default
    kernel vmlinuz
    append initrd=initrd.img inst.stage2=hd:LABEL=ALMA8 inst.repo=hd:LABEL=ALMA8 inst.ks=hd:LABEL=ALMA8:/ks.cfg quiet
  
  label linux
    menu label ^Install AlmaLinux 8.10
    kernel vmlinuz
    append initrd=initrd.img inst.stage2=hd:LABEL=AlmaLinux-8-10-x86_64-dvd quiet
  
  label check
    menu label Test this ^media & install AlmaLinux 8.10
    kernel vmlinuz
    append initrd=initrd.img inst.stage2=hd:LABEL=AlmaLinux-8-10-x86_64-dvd rd.live.check quiet
  
  menu separator
  
  label rescue
    menu label ^Rescue an AlmaLinux system
    kernel vmlinuz
    append initrd=initrd.img inst.stage2=hd:LABEL=AlmaLinux-8-10-x86_64-dvd rescue
  
  '''
# ---
